<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <artifactId>integration-service</artifactId>
    <version>2.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>integration-service</name>
    <description>Wrapper for our data</description>

    <parent>
        <artifactId>gis-portal</artifactId>
        <groupId>ru.mycrg</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <properties>
        <java.version>25</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <camunda.version>3.1.9</camunda.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.retry</groupId>
            <artifactId>spring-retry</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp</artifactId>
            <version>3.8.1</version>
        </dependency>

        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>org.camunda.bpm.springboot</groupId>
            <artifactId>camunda-bpm-spring-boot-starter-rest</artifactId>
            <version>${camunda.version}</version>
        </dependency>
        <dependency>
            <groupId>org.camunda.bpm.springboot</groupId>
            <artifactId>camunda-bpm-spring-boot-starter-webapp</artifactId>
            <version>${camunda.version}</version>
        </dependency>
        <dependency>
            <groupId>org.camunda.bpm</groupId>
            <artifactId>camunda-external-task-client</artifactId>
            <version>1.3.1</version>
        </dependency>

        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>22.0.0</version>
        </dependency>

        <dependency>
            <groupId>net.logstash.logback</groupId>
            <artifactId>logstash-logback-encoder</artifactId>
            <version>5.3</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20190722</version>
        </dependency>

        <!-- CRG -->
        <dependency>
            <groupId>ru.mycrg</groupId>
            <artifactId>messagebus-starter</artifactId>
            <version>2.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>ru.mycrg</groupId>
            <artifactId>http-client</artifactId>
            <version>2.2-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>ru.mycrg</groupId>
            <artifactId>geoserver-client</artifactId>
            <version>2.4.5-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>ru.mycrg</groupId>
            <artifactId>oauth-client</artifactId>
            <version>2.6-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>ru.mycrg</groupId>
            <artifactId>common-utils</artifactId>
            <version>2.4-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>ru.mycrg</groupId>
            <artifactId>auth-facade</artifactId>
            <version>2.2-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>ru.mycrg</groupId>
            <artifactId>jwt-support</artifactId>
            <version>2.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>ru.mycrg</groupId>
            <artifactId>auth-service-contract</artifactId>
            <version>2.12.2-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>ru.mycrg</groupId>
            <artifactId>audit-service-contract</artifactId>
            <version>2.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>ru.mycrg</groupId>
            <artifactId>resource-analyzer-contract</artifactId>
            <version>1.1-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>ru.mycrg</groupId>
            <artifactId>data-service-contract</artifactId>
            <version>2.9.10-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>ru.mycrg</groupId>
            <artifactId>gis-service-contract</artifactId>
            <version>2.4-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>ru.mycrg</groupId>
            <artifactId>geo-json</artifactId>
            <version>2.1-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>ru.mycrg</groupId>
            <artifactId>data-service-client</artifactId>
            <version>2.2-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <finalName>${project.name}</finalName>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.1.1</version>
                <executions>
                    <execution>
                        <id>copy-apm-agent</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>co.elastic.apm</groupId>
                                    <artifactId>elastic-apm-agent</artifactId>
                                    <version>1.55.0</version>
                                    <type>jar</type>
                                    <destFileName>apm-agent.jar</destFileName>
                                </artifactItem>
                            </artifactItems>
                            <outputDirectory>${project.build.directory}</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
